Changes for only json handling on API & even better Exception Handling
